<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_element"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#FFFFFF"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="70dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/download_button_message" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom">

        <Button android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="#438D8D"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/cancel" />
        <Button android:id="@+id/ok_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="#438D8D"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:text="@string/continue_button" />
    </LinearLayout>
</LinearLayout>