<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hkw.arrivinginberlin.TermsStartupFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/termsTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/main_title" />
        <ScrollView
            android:layout_below="@id/termsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll">
            <TextView
                android:id="@+id/termsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/terms_text" />
        </ScrollView>
        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_below="@id/scroll"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="center_horizontal"
            android:layout_height="40dp"
            android:text="@string/terms_agree"/>
        <Button
            android:id="@+id/button_decline"
            android:layout_width="match_parent"
            android:layout_below="@id/button_ok"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#FFFFFF"
            android:gravity="center_horizontal"
            android:text="@string/terms_decline"/>
    </RelativeLayout>
</FrameLayout>
