<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hkw.arrivinginberlin.StartupTextFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/title_screen_two"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/startupText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startupTitle"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/screen_two"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/next"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_below="@id/startupText"
            android:backgroundTint="#FFFFFF"
            android:text="@string/next"
            android:textColor="@drawable/button_text_color"
            android:layout_alignRight="@id/startupText"
            />
    </RelativeLayout>

</FrameLayout>
