<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hkw.arrivinginberlin.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.hkw.arrivinginberlin.TextviewPlus
                android:id="@+id/title_contact"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/contact" />
            <com.hkw.arrivinginberlin.TextviewPlus
                android:id="@+id/contact_text"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/title_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/contact_text" />
            <com.hkw.arrivinginberlin.ButtonPlus
                android:id="@+id/email_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="40dp"
                android:backgroundTint="#FFFFFF"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:layout_below="@id/contact_text"
                android:text="@string/send_email"/>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>
